Add space to track attribte boosts. Closes #51

--- a/Stars_Without_Number_Revised/Source/pug/character.pug
+++ b/Stars_Without_Number_Revised/Source/pug/character.pug
@@ -152,6 +152,7 @@ input(type="hidden", name="attr_magic_type", value="arcanist").magic-type
 				tr
 					th
 					th(data-i18n="BASE")
+					th(data-i18n="BOOSTS")
 					th(data-i18n="BONUS")
 					th(data-i18n="MODIFIER")
 			tbody
@@ -162,6 +163,9 @@ input(type="hidden", name="attr_magic_type", value="arcanist").magic-type
 						td
 							input(type="number", name=`attr_${attr}`, value="10").edit
 							span(name=`attr_${attr}`).display
+						td
+							input(type="number", name=`attr_${attr}_boosts`, value="0").edit
+							span(name=`attr_${attr}_boosts`).display
 						td
 							input(type="number", name=`attr_${attr}_bonus`, value="0").edit
 							span(name=`attr_${attr}_bonus`).display
