Moved Equipment and Campaign Notes to their own tabs.

--- a/TailsOfEquestria/less/index.less
+++ b/TailsOfEquestria/less/index.less
@@ -76,7 +76,13 @@
     input#sheetTabNPC:checked ~ .tabContents .tab#sheetTabNPCContainer {
       display: block;
     }
+    input#sheetTabEquipment:checked ~ .tabContents .tab#sheetTabEquipmentContainer {
+      display: block;
+    }
     input#sheetTabVehicle:checked ~ .tabContents .tab#sheetTabVehicleContainer {
+      display: block;
+    }
+    input#sheetTabNotes:checked ~ .tabContents .tab#sheetTabNotesContainer {
       display: block;
     }
   }
