--- a/TailsOfEquestria/less/pcSheet.less
+++ b/TailsOfEquestria/less/pcSheet.less
@@ -48,6 +48,14 @@
     }
   }
 
+  .explodingHooves {
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 1.5in;
+    width: 2.2in;
+  }
+
   .friendshipTokens {
     background: #f226e4;
     border-radius: 0.75in;
