--- a/TailsOfEquestria/pug/fields.pug
+++ b/TailsOfEquestria/pug/fields.pug
@@ -92,12 +92,9 @@ mixin selectDice(name)
 mixin selectQuirkSource(name)
   +select(name)(style=attributes.style)
     +option('Pick One', 'null', true)
+    +option('Main')
     +option('Race')
-    +option('Curse')
     +option('Item')
-    +option('Personality')
-    +option('Physical')
-    +option('Story')
     +option('Temporary')
     +option("Other")
 
@@ -107,11 +104,9 @@ mixin selectTalentSource(name)
     +option('Cutie Mark')
     +option('Race')
     +option('Level Up')
-    +option('Book')
     +option('Item')
-    +option('Spell')
-    +option('Story')
     +option('Temporary')
+    +option('Training')
     +option('Other')
     
 mixin selectTrait(name)
