--- a/TailsOfEquestria/pug/tabPC.pug
+++ b/TailsOfEquestria/pug/tabPC.pug
@@ -100,10 +100,12 @@ include fields.pug
       h1 Quirks:
       +repeating('quirks')
         .quirk
-          .quirkIcon(style='font-size: 2em;')
-          +labelledUnderlined(''): +input('text', 'name')(placeholder='Quirk Name')
-          +labelledUnderlined('Source:'): +selectQuirkSource('source')
-          +labelledUnderlined('Notes'): +input('text', 'notes')
+          div(style="display: inline-block; vertical-align: top; width: 0.4in;")
+            .quirkIcon(style='font-size: 2em;')
+          div(style="display: inline-block; width: 6.5in;")
+            +labelledUnderlined(''): +input('text', 'name')(placeholder='Quirk Name')
+            +labelledUnderlined('Source:'): +selectQuirkSource('source')
+            +labelledUnderlined('Notes'): +input('text', 'notes')
 
   div
     .reputations
@@ -122,11 +124,8 @@ include fields.pug
     
   div
     .inlineBlock(style='margin-right: 1em; vertical-align: top; width: 48%;')
-      h1 Equipment:
-      +textarea('equipment')(style='height: 4in;')
+      h1 Appearance:
+      +textarea('appearance')(style='height: 2in;')
     .inlineBlock(style='width: 48%;')
-      h1 Appearance/Cutie Mark:
-      +textarea('appearance')
-      
-      h1 Campaign Notes:
-      +textarea('campaignNotes')  
+      h1 Background:
+      +textarea('background')(style='height: 2in;')
