--- a/TailsOfEquestria/sheet.css
+++ b/TailsOfEquestria/sheet.css
@@ -271,6 +271,14 @@
 .charsheet .sheet-d20::before {
   content: "t";
 }
+.charsheet .sheet-itemIcon {
+  display: inline-block;
+  font-family: pictos;
+  vertical-align: middle;
+}
+.charsheet .sheet-itemIcon::before {
+  content: ":";
+}
 .charsheet .sheet-quirkIcon {
   display: inline-block;
   font-family: pictos;
@@ -337,6 +345,13 @@
   font-size: 0.7em;
   padding: 0;
   width: 2.5in;
+}
+.charsheet .sheet-main-container .sheet-pcSheet .sheet-explodingHooves {
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 1.5in;
+  width: 2.2in;
 }
 .charsheet .sheet-main-container .sheet-pcSheet .sheet-friendshipTokens {
   background: #f226e4;
@@ -906,6 +921,21 @@
 .charsheet .sheet-main-container .sheet-tabSheet.sheet-vehicleSheet .sheet-vehicleStats .sheet-fraction span {
   vertical-align: middle;
 }
+.charsheet .sheet-main-container .sheet-tabSheet.sheet-equipmentSheet .sheet-equipmentHeader {
+  margin-bottom: 0;
+}
+.charsheet .sheet-main-container .sheet-tabSheet.sheet-equipmentSheet .sheet-equipmentHeader span {
+  display: inline-block;
+  font-style: italic;
+  font-weight: bold;
+  padding-right: 1em;
+}
+.charsheet .sheet-main-container .sheet-tabSheet.sheet-equipmentSheet .sheet-equipmentBody .sheet-labelledUnderlined {
+  padding-right: 1em;
+}
+.charsheet .sheet-main-container .sheet-tabSheet.sheet-notesSheet textarea {
+  height: 6in;
+}
 .charsheet .sheet-main-container .sheet-tabSheet > div {
   margin-bottom: 0.2in;
 }
@@ -978,8 +1008,11 @@
   background: transparent;
   color: #5e3dba;
 }
-.charsheet .sheet-main-container .sheet-quirks .sheet-quirk .sheet-labelledUnderlined:nth-of-type(4) {
-  width: 4.5in;
+.charsheet .sheet-main-container .sheet-quirks .sheet-quirk .sheet-labelledUnderlined {
+  vertical-align: middle;
+}
+.charsheet .sheet-main-container .sheet-quirks .sheet-quirk .sheet-labelledUnderlined:nth-of-type(3) {
+  width: 4in;
 }
 .charsheet .sheet-main-container .sheet-talents {
   background: #B3E7EF;
@@ -1122,7 +1155,13 @@
 .charsheet .sheet-tabs input#sheet-sheetTabNPC:checked ~ .sheet-tabContents .sheet-tab#sheet-sheetTabNPCContainer {
   display: block;
 }
+.charsheet .sheet-tabs input#sheet-sheetTabEquipment:checked ~ .sheet-tabContents .sheet-tab#sheet-sheetTabEquipmentContainer {
+  display: block;
+}
 .charsheet .sheet-tabs input#sheet-sheetTabVehicle:checked ~ .sheet-tabContents .sheet-tab#sheet-sheetTabVehicleContainer {
+  display: block;
+}
+.charsheet .sheet-tabs input#sheet-sheetTabNotes:checked ~ .sheet-tabContents .sheet-tab#sheet-sheetTabNotesContainer {
   display: block;
 }
 .charsheet .sheet-top {
