--- a/TailsOfEquestria/less/main.less
+++ b/TailsOfEquestria/less/main.less
@@ -7,6 +7,8 @@
   @import "pcSheet.less";
   @import "npcSheet.less";
   @import "vehicleSheet.less";
+  @import "equipmentSheet.less";
+  @import "notesSheet.less";
 
   .tabSheet > div {
     margin-bottom: 0.2in;
@@ -96,8 +98,12 @@
         color: @fontColor;
       }
 
-      .labelledUnderlined:nth-of-type(4) {
-        width: 4.5in;
+      .labelledUnderlined {
+        vertical-align: middle;
+      }
+
+      .labelledUnderlined:nth-of-type(3) {
+        width: 4in;
       }
     }
   }
