Display version # in banner.

--- a/TailsOfEquestria/less/index.less
+++ b/TailsOfEquestria/less/index.less
@@ -101,5 +101,12 @@
       width: 100%;
       background: linear-gradient(fade(#fff, 0%), #fff);
     }
+
+    .version {
+      bottom: 0;
+      opacity: 0.5;
+      position: absolute;
+      right: 0;
+    }
   }
 }
