--- a/TailsOfEquestria/pug/index.pug
+++ b/TailsOfEquestria/pug/index.pug
@@ -8,6 +8,7 @@ include tabs.pug
 .top
   img(src='https://i.pinimg.com/originals/15/90/a7/1590a71a0c382f70a499c977caa6e3bb.jpg')
   .mask
+  .version Version SCRIPT_VERSION
 
 +tabs('sheet_type', [
   { id: 'sheetTabPC', label: 'PC', include: 'tabPC.pug', tooltip: 'Main sheet for Player Characters.' },
