--- a/TailsOfEquestria/sheet.css
+++ b/TailsOfEquestria/sheet.css
@@ -1178,3 +1178,9 @@
   width: 100%;
   background: linear-gradient(rgba(255, 255, 255, 0), #fff);
 }
+.charsheet .sheet-top .sheet-version {
+  bottom: 0;
+  opacity: 0.5;
+  position: absolute;
+  right: 0;
+}
