Include banner graphic in repository.

--- a/TailsOfEquestria/pug/index.pug
+++ b/TailsOfEquestria/pug/index.pug
@@ -6,7 +6,7 @@ include tabs.pug
 +input('checkbox', 'useApiExplodingHoof')(style="display: none;")
 
 .top
-  img(src='https://i.pinimg.com/originals/15/90/a7/1590a71a0c382f70a499c977caa6e3bb.jpg')
+  img(src='https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/TailsOfEquestria/banner.jpeg')
   .mask
   .version Version SCRIPT_VERSION
 
