--- a/Palladium Fantasy 1E/palladium_fantasy_1e.css
+++ b/Palladium Fantasy 1E/palladium_fantasy_1e.css
@@ -284,7 +284,7 @@ button[type=roll].sheet-rangeddice::before {
     width: 160px;
 }
 .sheet-meleedice, .sheet-rangeddice{
-    background:#3d5a48;
+    background:#6b8a76;
     color:#ebebeb;
 }
 .sheet-damage-dice{
@@ -450,6 +450,10 @@ button[type=roll].sheet-rangeddice::before {
 }
 button[type=roll].sheet-savedice::before {
     content: ''; 
+}
+.sheet-savedice{
+    color: #ebebeb;
+    background: #6b8a76;
 }
 .sheet-underline{
     text-decoration: underline;
