Tesero y Gloria: minor fixes, refactor one <table>

--- a/Tesoro-y-Gloria/tesoroygloria.css
+++ b/Tesoro-y-Gloria/tesoroygloria.css
@@ -44,3 +44,21 @@ textarea {
 .sheet-tabstoggle[value="monstruos"] ~ div.sheet-monstruos {
 	display: block;
 }
+
+div.sheet-main-info{
+	display: grid;
+	grid-template-columns: 2fr 8fr 2fr 4fr 6fr 4fr;
+	grid-template-rows: 1fr 1fr;
+	width: 750px;
+	grid-gap: 1px;
+	padding: 5px;
+}
+
+div.sheet-main-info .sheet-title{
+	background-color: grey;
+
+}
+
+div.sheet-main-info span{
+	font-weight: bold;
+}
