Tesero y Gloria: code cleanup, upload images, add roll20id

--- a/Tesoro-y-Gloria/tesoroygloria.css
+++ b/Tesoro-y-Gloria/tesoroygloria.css
@@ -1,3 +1,58 @@
+/* General styling */
+
+.charsheet {
+  background-color: #fff;
+  min-width: 800px;
+}
+
+input {
+  display: inline-block;
+  width: 165px;
+}
+
+input.sheet-w240{
+  width:240px;
+}
+input.sheet-w200{
+  width:200px;
+}
+input.sheet-w150{
+  width:150px;
+}
+input.sheet-w125{
+  width:125px;
+}
+input.sheet-w110{
+  width:110px;
+}
+input.sheet-w100{
+  width:100px;
+}
+input.sheet-w70{
+  width:70px;
+}
+input.sheet-w60{
+  width:60px;
+}
+input.sheet-w32{
+  width:32px;
+}
+
+p {
+    margin: 5px;
+}
+
+textarea {
+  padding: 6px 10px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 2px;
+  background-color: #f8f8f8;
+  resize: none;
+  display: block;
+  margin: 5px;
+}
+
 table  {  
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -29,6 +84,97 @@ textarea {
   resize: none;
 }
 
+
+/* Section specific */
+
+
+/* Page 1 */
+
+/* Main info block */
+
+div.sheet-main-info{
+  display: grid;
+  grid-template-columns: 2fr 5fr 2fr 3fr 5fr 2fr;
+  grid-template-rows: 1fr 1fr;
+  width: 710px;
+  height: 60px;
+  margin: 5px;
+  border: 3px solid #ddd;
+}
+
+div.sheet-main-info .sheet-title{
+  background-color: #ddd;
+}
+
+div.sheet-main-info span.sheet-title {
+  font-weight: bold;
+  padding-left: 4px;
+}
+
+div.sheet-main-info button + span.sheet-title {
+  padding-left: 0px;
+}
+
+.sheet-main-stats input[type="text"] {
+  width: 450px;
+}
+
+
+/* Page 1 - shield & images */
+.sheet-skull{
+  width:38px;
+  height: 38px;
+}
+.sheet-shield{
+  width:38px;
+  height: 38px; 
+}
+.sheet-sword{
+  width:38px;
+  height: 38px;
+}
+.sheet-foot{
+  width: 42px;
+  height: 38px;
+}
+
+/* Page 1 - Protecciones */
+
+.sheet-protec input.sheet-tipo{
+  width: 55px;
+}
+
+.sheet-protec input.sheet-prop{
+  width: 250px;
+}
+
+select.sheet-dtype {
+  vertical-align: top;
+  width: 60px;
+}
+
+
+/* Page 2 */
+
+/* Page 2 Talentos */
+
+.sheet-talentos textarea{
+  width: 350px;
+  height: 71px;
+}
+.sheet-talentos .sheet-talentos-prestigio textarea{
+  width: 200px;
+  height: 52px;
+}
+
+/* Page 4 DEVOCIÓN  */
+
+.sheet-dominos input{
+  width: 95px;
+}
+
+/* Tabs */
+
 .sheet-pericias,
 .sheet-tesoro,
 .sheet-diario,
@@ -45,20 +191,3 @@ textarea {
 	display: block;
 }
 
-div.sheet-main-info{
-	display: grid;
-	grid-template-columns: 2fr 8fr 2fr 4fr 6fr 4fr;
-	grid-template-rows: 1fr 1fr;
-	width: 750px;
-	grid-gap: 1px;
-	padding: 5px;
-}
-
-div.sheet-main-info .sheet-title{
-	background-color: grey;
-
-}
-
-div.sheet-main-info span{
-	font-weight: bold;
-}
