Tesero y Gloria: adjust images

--- a/Tesoro-y-Gloria/tesoroygloria.css
+++ b/Tesoro-y-Gloria/tesoroygloria.css
@@ -121,21 +121,25 @@ div.sheet-main-info button + span.sheet-title {
 
 
 /* Page 1 - shield & images */
-.sheet-skull{
-  width:38px;
-  height: 38px;
+img.sheet-skull{
+  width:45px;
+  height: 45px;
 }
-.sheet-shield{
-  width:38px;
-  height: 38px; 
+img.sheet-armor{
+  width:45px;
+  height: 60px; 
 }
-.sheet-sword{
-  width:38px;
-  height: 38px;
+img.sheet-sword{
+  width:45px;
+  height: 45px;
 }
-.sheet-foot{
-  width: 42px;
-  height: 38px;
+select.sheet-sword{
+  margin-top: 17px;
+  margin-bottom: 0px;
+}
+img.sheet-foot{
+  width: 45px;
+  height: 60px;
 }
 
 /* Page 1 - Protecciones */
