--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -566,7 +566,7 @@ input.sheet-tab0 + span {
 
 /*  NOTEBOX */
 .sheet-row-details.sheet-notebox {
-    height: 265px;
+    height: 318px;
     padding: 0 4px;
 }
 
@@ -595,23 +595,23 @@ input.sheet-tab0 + span {
 }
 
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes {
-    height: 22px;
+    height: 91px;
     margin-bottom: 5px;
 }
 
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-title {
-    width: 132px;
-    float: left;
     font-weight: bold;
 }
 
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-input {
     float: left;
-    width: calc(100% - 160px);
+    width: 190px;
+    margin-right: 5px;
 }
 
-.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-input input {
-    width: 100%;
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-input textarea {
+    width: 178px;
+    height: 55px;
 }
 
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-tooltip {
@@ -1987,7 +1987,7 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 }
 
 .sheet-spells .sheet-row-details.sheet-notebox {
-    height: 285px;
+    height: 318px;
     padding: 0 4px;
 }
 
