--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1958,11 +1958,15 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 .sheet-spells .sheet-col5 { width: 30px; }
 .sheet-spells .sheet-col6 { width: 75px; }
 .sheet-spells .sheet-col7 { width: 60px; }
-.sheet-spells .sheet-col8 { width: 90px; }
-.sheet-spells .sheet-col9 { width: 115px; }
-.sheet-spells .sheet-col10 { width: 85px; }
+.sheet-spells .sheet-col8 { width: 85px; }
+.sheet-spells .sheet-col9 { width: 110px; }
+.sheet-spells .sheet-col10 { width: 80px; }
 .sheet-spells .sheet-col11 { width: 65px; }
 .sheet-spells .sheet-col12 { width: 25px; }
+
+.sheet-spells .sheet-tooltip-spell-time {
+    margin-left: -80px;
+}
 
 .sheet-spells .sheet-row-stats .sheet-col0 { margin-left: 44px; width: calc(100% - 748px); }
 
