--- a/Adventure!/Adventure!.css
+++ b/Adventure!/Adventure!.css
@@ -158,7 +158,7 @@ div.sheet-core-content {
 
 .charsheet div[class^="sheet-section"] {     
     display: none;
-    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/The%20One%20Ring/assets/images/15L8aEI.jpg');
+    background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Adventure!/assets/images/15L8aEI.jpg');
     background-size:100%;
     padding-left:26px;
     padding-right:26px;
