Update Palladium_Fantasy_1E sheet (#5683)
* Update ReadMe.md

Added a link to the Chat Menu entry of the Stupid Roll20 Tricks thread on the forums.

* Update paladium_fantasy_1e.html

Reworked tabs to run on sheetworkers instead of radio buttons.  Added a release notes section.

* Update palladium_fantasy_1e.css

Reworked sheet tabs, changed all tabs to have the same background color other than the new release notes tab.

* Delete sheet_tab1.png

Outdated with changes to tabs.

* Delete sheet_tab2.png

Outdated with changes to tabs.

* Delete sheet_tab3.png

Outdated with changes to tabs and background color.

* Delete sheet_tab4.png

Outdated with changes to tabs and background color.

* Delete sheet_tab5.png

Outdated with changes to tabs and background color.

* Delete sheet_tab6.png

Outdated with changes to tabs and background color

* Add new tab images

These show the updated tabs and the unified tab background color scheme.

* Update palladium_fantasy_1e.css

Fixed issue with some roll buttons only showing the correct background when moused over.

* Update palladium_fantasy_1e.html

Corrected the default saving throw target for circles and wards, which had each been 1 higher than they should have been.

--- a/Palladium Fantasy 1E/palladium_fantasy_1e.css
+++ b/Palladium Fantasy 1E/palladium_fantasy_1e.css
@@ -1,129 +1,113 @@
-.sheet-background-panel{
-    background-color: #D3D3D3;
+.sheet-base {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    border:solid black 1px;
 }
-.sheet-tab-content { 
-    display: none; 
-}
-
-.sheet-tab1:checked ~ .sheet-tab1,
-.sheet-tab2:checked ~ .sheet-tab2,
-.sheet-tab3:checked ~ .sheet-tab3,
-.sheet-tab4:checked ~ .sheet-tab4,
-.sheet-tab5:checked ~ .sheet-tab5,
-.sheet-tab6:checked ~ .sheet-tab6
-{
-    display: block;
-}
-
-.sheet-tab{
-    width: 100px;
-    height: 20px;
-    position: relative;
-    top: -15px;
-    left: 0px;
-    margin: -1.5px;
-    margin-bottom: 2px;
-    cursor: pointer;
-    z-index: 1;
-    opacity: 0;
+/* Configure the Button Bar */
+.sheet-buttonbar {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    padding: 5px 0 0 0;
+    background: #cdc6b1;
+    border:solid 1px black;
 }
 
-.sheet-tab + span::before{
-    content:attr(title);
-
-    border: solid 2px #a8a8a8;
-    border-bottom-color: black;
-    text-align: center;
-    display: inline-block;
-    
-    background: #fff;
-    background: -moz-linear-gradient(to top, #D3D3D3    , #fff, #D3D3D3 );
-    background: -webkit-linear-gradient(to top, #D3D3D3 8, #fff, #D3D3D3 );
-    background: -ms-linear-gradient(to top, #D3D3D3 , #fff, #D3D3D3 );
-    background: -o-linear-gradient(to top, #D3D3D3  , #fff, #D3D3D3 );
-    background: linear-gradient(to top, #D3D3D3 , #fff, #D3D3D3 );
-    
-    width: 100px;
-    height: 20px;
-    font-size: 18px;
-    
-    position: absolute;
-    top: 70px;
-    left: 30px;
+.sheet-navbuttons {
+    display: flex;
+    text-align: left;
+    flex-wrap: nowrap;
+    flex: 1 0 35%;
 }
 
-.sheet-tab:checked + span::before{
-    background: #dcdcdc;
-    background: -moz-linear-gradient(to top, #D3D3D3    , #dcdcdc, #D3D3D3  );
-    background: -webkit-linear-gradient(to top, #D3D3D3 , #dcdcdc, #D3D3D3  );
-    background: -ms-linear-gradient(to top, #fcfcfc, #dcdcdc, #fcfcfc);
-    background: -o-linear-gradient(to top, #D3D3D3  , #dcdcdc, #D3D3D3  );
-    background: linear-gradient(to top, #D3D3D3 , #dcdcdc, #D3D3D3  );
-    border-bottom-color: #fff;
+.sheet-line-divider{
+    flex: 0 1 40%;
+    align-items:center;
 }
-.sheet-tab2 + span::before{
-    left: 130px;
+
+.sheet-docbuttons {
+    text-align: right;
+    flex: 1 0 25%;
 }
-.sheet-tab3 + span::before{
-    left: 231px;
-}
-.sheet-tab4 + span::before{
-    left: 332px;
-}
-.sheet-tab5 + span::before{
-    left: 433px;
-}
-.sheet-tab6 + span::before{
-    left: 534px;
-}
-.sheet-tab-content {
-    border: 1px solid #a8a8a8;
-    border-top-color: #000;
-    padding: 5px;
-}
-.sheet-arrow {
-    float: left;
-}
-.sheet-arrow:checked ~ .sheet-body {
-    display: block;
-}
-.sheet-select {
-    margin-bottom: 0;
-}
-.sheet-tab1 { 
-    background-color: #9cb09b; 
-}
-.sheet-tab2 { 
-    background-color: #9cb09b; 
-}
-.sheet-tab3 { 
-    background-color: #cb9f75;
-}
-.sheet-tab4 { 
-    background-color: #b8b782; 
-}
-.sheet-tab5 { 
-    background-color: #c6cdda; 
-}
-.sheet-tab6 { 
-    background-color: #9ca8ae; 
-}
-div.sheet-body {
+/*Configure the tab*/
+.sheet-character,
+.sheet-social,
+.sheet-skill,
+.sheet-combat,
+.sheet-equipment,
+.sheet-journal,
+.sheet-release{
     display: none;
 }
-.sheet-center {
-    margin-left:auto; 
-    margin-right:auto;
+
+.sheet-characterT:checked ~ div.sheet-character,
+.sheet-socialT:checked ~ .sheet-social,
+.sheet-skillT:checked ~ div.sheet-skill,
+.sheet-combatT:checked ~ div.sheet-combat,
+.sheet-equipmentT:checked ~ div.sheet-equipment,
+.sheet-journalT:checked ~ div.sheet-journal,
+.sheet-releaseN:checked ~ div.sheet-release{
+    display: block;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
 }
-.repcontainer,
-.repitem{
-    margin 0
-    border 0
-    padding 0
-    display:contents;
+.sheet-topbuttons {
+    background-color: transparent;
+    border: none;
+    background-image: none;
+    font-weight: bold;
+    box-shadow: none;
+    text-shadow: none;
+    height: 28px;
+    margin: 0px;
+    padding: 0 5px 0 5px;
 }
-.repcontrol{
-    grid-column:1 / -1;
+
+.sheet-tab + span.sheet-socialT {
+    margin-left: -20px;
+}
+
+.sheet-newcontent[value="read"] + .sheet-releasenotesbutton{
+    color: black;
+}
+
+.sheet-newcontent[value="unread"] + .sheet-releasenotesbutton {
+    color: red;
+}
+
+.sheet-character{
+    background: #9cb09b;
+}
+.sheet-social{
+    background: #9cb09b;
+}
+.sheet-skill{
+    background: #9cb09b;
+}
+.sheet-combat{
+    background: #9cb09b;
+}
+.sheet-equipment{
+    background: #9cb09b;
+}
+.sheet-journal{
+    background: #9cb09b;
+}
+.sheet-release, .sheet-documentation{
+    background: #c6cdda;
+}
+input.sheet-arrow {
+    float: left;
+}
+.sheet-body{
+    display: none;
+}
+input.sheet-arrow:checked ~ .sheet-body {
+    display: block;
 }
 .sheet-statheader-container{
     display:grid;
@@ -163,7 +147,7 @@ div.sheet-body {
     display:grid;
     align-items:center;
     padding-bottom:5px;
-    padding-left:10px;
+    padding-left:5px;
     grid-template-columns: 50px 213px 75px 213px
 }
 .sheet-class-grid-container{
@@ -185,22 +169,23 @@ div.sheet-body {
     display:grid;
     align-items:center;
     padding:10px;
-    border:5px solid #6da6c2;
+    border:5px solid #82a3b5;
     border-radius:10px;
     grid-template-columns: 65px 65px
 }
 button[type=roll].sheet-statdice::before {
-    content: ''; 
+    content: "";
 }
 .sheet-statdice{
-    background-color: #6da6c2;
     color:black;
+    background: #82a3b5;
+    font-weight:bold;
 }
 .sheet-gold-grid-container{
     display:grid;
     align-items:center;
     padding:10px;
-    border:5px solid #c2b96d;
+    border:5px solid #c0b982;
     border-radius:10px;
     grid-template-columns: 90px 65px
 }
@@ -208,16 +193,16 @@ button[type=roll].sheet-statdice::before {
     display:grid;
     align-items:center;
     padding:10px;
-    border:5px solid #8acfd5;
+    border:5px solid #a7cacd;
     border-radius:10px;
     grid-template-columns: 90px 75px
 }
 button[type=roll].sheet-rolldice::before {
-    content: ''; 
+    content: ""; 
 }
 .sheet-rolldice{
-    background-color: #8acfd5;
     color:black;
+    background: #a7cacd;
 }
 .sheet-roll-field, .sheet-caster-field{
     width:65px;
@@ -226,7 +211,7 @@ button[type=roll].sheet-rolldice::before {
     display:grid;
     align-items:center;
     padding:10px;
-    border:5px solid #c28e6d;
+    border:5px solid #b8927a;
     border-radius:10px;
     grid-template-columns: 90px 75px
 }
@@ -242,7 +227,7 @@ button[type=roll].sheet-rolldice::before {
 .sheet-wealth-field, .sheet-bonus-field, .sheet-occ-field, .sheet-skill-notes, .sheet-elective-field, 
 .sheet-secondary-field, .sheet-mystic-field, .sheet-melee-field, .sheet-ranged-field, 
 .sheet-combat-field, .sheet-combat-textarea, .sheet-save-field, .sheet-notes-field, .sheet-notes-textarea, 
-.sheet-weight-box, .sheet-weightsub-box, .sheet-whisper-select{
+.sheet-weight-box, .sheet-weightsub-box, .sheet-whisper-select, .sheet-mattack-text, .sheet-rattack-text{
     background-color:#ebebeb;
 }
 .sheet-fraction-grid-container{
@@ -299,11 +284,14 @@ button[type=roll].sheet-rangeddice::before {
     width: 160px;
 }
 .sheet-meleedice, .sheet-rangeddice{
-    background:#3d5a48;
+    background:#6b8a76;
     color:#ebebeb;
 }
 .sheet-damage-dice{
     width: 60px;
+}
+.sheet-mattack-text, .sheet-rattack-text{
+    width: 48px;
 }
 .sheet-mattack-notes{
     width:170px;
@@ -412,7 +400,7 @@ button[type=roll].sheet-rangeddice::before {
 }
 .sheet-melee-proficiency-panel{
     padding-bottom:5px;
-    border-bottom:5px solid #aeb4bf;
+    border-bottom:5px solid #889987;
     max-width:460px;
 }
 .sheet-melee-grid-container{
@@ -430,7 +418,7 @@ button[type=roll].sheet-rangeddice::before {
 }
 .sheet-combat-skill-panel{
     padding:5px;
-    border:5px solid #aeb4bf;
+    border:5px solid #889987;
     border-radius:10px;
     max-width:525px;
 }
@@ -462,6 +450,10 @@ button[type=roll].sheet-rangeddice::before {
 }
 button[type=roll].sheet-savedice::before {
     content: ''; 
+}
+.sheet-savedice{
+    color: #ebebeb;
+    background: #6b8a76;
 }
 .sheet-underline{
     text-decoration: underline;
