--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -26,9 +26,9 @@
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-	color: red;
-	font-style:italic;
-	opacity: 0.5; /* Firefox */
+    color: red;
+    font-style:italic;
+    opacity: 0.5; /* Firefox */
 }
 
 
@@ -566,7 +566,7 @@ input.sheet-tab0 + span {
 
 /*  NOTEBOX */
 .sheet-row-details.sheet-notebox {
-    height: 265px;
+    height: 318px;
     padding: 0 4px;
 }
 
@@ -595,23 +595,23 @@ input.sheet-tab0 + span {
 }
 
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes {
-    height: 22px;
+    height: 91px;
     margin-bottom: 5px;
 }
 
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-title {
-    width: 132px;
-    float: left;
     font-weight: bold;
 }
 
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-input {
     float: left;
-    width: calc(100% - 160px);
+    width: 190px;
+    margin-right: 5px;
 }
 
-.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-input input {
-    width: 100%;
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-input textarea {
+    width: 178px;
+    height: 55px;
 }
 
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-tooltip {
@@ -771,7 +771,7 @@ input.sheet-tab0 + span {
     background: #66ffff;
     line-height: 1.5em;
     font-size: 11px;
-	box-shadow: 5px 10px 8px #888888;
+    box-shadow: 5px 10px 8px #888888;
 }
 
 .sheet-tooltip table {
@@ -1958,11 +1958,15 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 .sheet-spells .sheet-col5 { width: 30px; }
 .sheet-spells .sheet-col6 { width: 75px; }
 .sheet-spells .sheet-col7 { width: 60px; }
-.sheet-spells .sheet-col8 { width: 90px; }
-.sheet-spells .sheet-col9 { width: 115px; }
-.sheet-spells .sheet-col10 { width: 85px; }
+.sheet-spells .sheet-col8 { width: 85px; }
+.sheet-spells .sheet-col9 { width: 110px; }
+.sheet-spells .sheet-col10 { width: 80px; }
 .sheet-spells .sheet-col11 { width: 65px; }
 .sheet-spells .sheet-col12 { width: 25px; }
+
+.sheet-spells .sheet-tooltip-spell-time {
+    margin-left: -80px;
+}
 
 .sheet-spells .sheet-row-stats .sheet-col0 { margin-left: 44px; width: calc(100% - 748px); }
 
@@ -1987,7 +1991,7 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 }
 
 .sheet-spells .sheet-row-details.sheet-notebox {
-    height: 285px;
+    height: 318px;
     padding: 0 4px;
 }
 
