Tesero y Gloria: last tables removed, minor cleanup, preview updated

--- a/Tesoro-y-Gloria/tesoroygloria.css
+++ b/Tesoro-y-Gloria/tesoroygloria.css
@@ -10,6 +10,11 @@ input {
   width: 165px;
 }
 
+.sheet-margin{
+    margin-left: 5px;
+    margin-bottom: 5px;
+}
+
 input.sheet-w240{
   width:240px;
 }
@@ -22,11 +27,17 @@ input.sheet-w150{
 input.sheet-w125{
   width:125px;
 }
+input.sheet-w120{
+  width:120px;
+}
 input.sheet-w110{
   width:110px;
 }
 input.sheet-w100{
   width:100px;
+}
+input.sheet-w85{
+  width:85px;
 }
 input.sheet-w70{
   width:70px;
@@ -102,7 +113,7 @@ div.sheet-main-info{
   border: 3px solid #ddd;
 }
 
-div.sheet-main-info .sheet-title{
+div.sheet-main-info{
   background-color: #ddd;
 }
 
@@ -116,6 +127,133 @@ div.sheet-main-info button + span.sheet-title {
 }
 
 .sheet-main-stats input[type="text"] {
+  width: 450px;
+}
+
+
+
+/* CARACTERÍSTICAS info block */
+
+div.sheet-car-info{
+  display: grid;
+  grid-template-columns: 2fr repeat(2, 1fr) 5fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  width: 710px;
+  margin: 5px;
+  border: 3px solid #ddd;
+}
+
+div.sheet-car-info .sheet-top{
+  background-color: #ddd;
+}
+
+div.sheet-car-info span.sheet-top {
+  font-weight: bold;
+  padding-left: 4px;
+}
+
+div.sheet-car-info span.sheet-bot {
+  padding-left: 4px;
+  font-size: 110%;
+}
+
+div.sheet-car-info button + span.sheet-top {
+  padding-left: 0px;
+}
+
+.sheet-car-stats input[type="text"] {
+  width: 450px;
+}
+
+/* ARMAS info block */
+
+div.sheet-arma-info{
+  display: grid;
+  grid-template-columns: 205px 60px 95px 250px 50px 50px;
+  grid-template-rows: 28px;
+  width: 710px;
+  margin: 5px;
+  border: 3px solid #ddd;
+}
+
+div.sheet-arma-info .sheet-wep{
+  background-color: #ddd;
+}
+
+div.sheet-arma-info span.sheet-wep {
+  font-weight: bold;
+  padding-left: 4px;
+}
+
+
+div.sheet-arma-info button + span.sheet-wep {
+  padding-left: 0px;
+}
+
+.sheet-arma-stats input[type="text"] {
+  width: 450px;
+}
+
+/* PROTECCIONES info block */
+
+div.sheet-prot-info{
+  display: grid;
+  grid-template-columns: 180px 55px 55px 55px 70px 235px 60px;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  width: 710px;
+  margin: 5px;
+  border: 3px solid #ddd;
+}
+
+div.sheet-prot-info .sheet-def{
+  background-color: #ddd;
+}
+
+div.sheet-prot-info span.sheet-def {
+  font-weight: bold;
+  padding-left: 4px;
+}
+
+div.sheet-prot-info span.sheet-def {
+  padding-left: 4px;
+  font-size: 100%;
+}
+
+
+div.sheet-prot-info button + span.sheet-def {
+  padding-left: 0px;
+}
+
+.sheet-prot-stats input[type="text"] {
+  width: 450px;
+}
+
+/* MONSTRUOS info block */
+
+div.sheet-mon-info{
+  display: grid;
+  grid-template-columns: 205px 60px 95px 250px;
+  grid-template-rows: 28px;
+  width: 610px;
+  margin: 5px;
+  border: 3px solid #ddd;
+}
+
+div.sheet-mon-info .sheet-dang{
+  background-color: #ddd;
+}
+
+div.sheet-mon-info span.sheet-dang {
+  font-weight: bold;
+  padding-left: 4px;
+}
+
+
+div.sheet-mon-info button + span.sheet-dang {
+  padding-left: 0px;
+}
+
+.sheet-mon-stats input[type="text"] {
   width: 450px;
 }
 
