Exalted 2E: Add Dragonblood Earth Ability with toggle, framework for more

--- a/Exalted2e/exalted2e.css
+++ b/Exalted2e/exalted2e.css
@@ -622,3 +622,40 @@ div.sheet-ability > input[type=checkbox]:first-child + span::before,
 div.sheet-attribute > input[type=checkbox]:first-child + span::before,
 .sheet-dots input[type=checkbox]:first-child:hover + span::before,
 .sheet-dots input[type=checkbox]:first-child:checked + span::before { opacity: 1; }
+
+
+/*Configure the tab buttons*/
+.sheet-solar-ab,
+.sheet-dragon-ab{
+    display: none;
+}
+
+/* show the selected tab */
+.sheet-caste-toggle[value="Dawn"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Zenith"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Twilight"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Night"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Eclipse"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
+
+.sheet-caste-toggle[value="Earth"] ~ div.sheet-dragon-ab,
+.sheet-caste-toggle[value="Fire"] ~ div.sheet-dragon-ab,
+.sheet-caste-toggle[value="Water"] ~ div.sheet-dragon-ab,
+.sheet-caste-toggle[value="Air"] ~ div.sheet-dragon-ab,
+.sheet-caste-toggle[value="Wood"] ~ div.sheet-dragon-ab,{
+    display: block;
+}
