Exalted 2E: All Dragon-blooded caste added, css comments, minor visual fix, readme comments

--- a/Exalted2e/exalted2e.css
+++ b/Exalted2e/exalted2e.css
@@ -1,3 +1,18 @@
+/*    TOC
+....
+1. Roll Templates..
+2. General Styling.
+3. Checkboxes......
+4. Tabs............
+5. Misc............
+6. Caste Abilities.
+....
+ */
+
+/* *************** */
+/*  Roll Templates */
+/* *************** */
+
 .sheet-rolltemplate-joinbattle > div > img,
 .sheet-rolltemplate-joindebate > div > img,
 .sheet-rolltemplate-joinwar > div > img {
@@ -61,6 +76,11 @@
     padding: 0 3px 0 3px;
 }
 .sheet-rolltemplate-damage span.sheet-damage-type::first-letter { text-transform: uppercase; }
+
+
+/* *************** */
+/* General Styling */
+/* *************** */
 
 .charsheet
 {
@@ -401,12 +421,16 @@ label.sheet-soak input:focus,
     padding-right: 0;
 }
 
+
+/* *************** */
+/*   Checkboxes    */
+/* *************** */
+
 input[type=radio],
 input[type=checkbox]
 {
     cursor: pointer;
-
-    top:    5px;
+    top:    2px;
     left:   6px;
     width:  16px;
     height: 16px;
@@ -514,6 +538,68 @@ input[type=checkbox] + span::before
 
 .sheet-familiar-health-row select.sheet-health-value { float: none; }
 
+/* makes radio button for zeroing stat partially transparent by default, and solid on hover */
+/* Styles unique to fake checkbox (unchecked) */
+/*
+.sheet-dots input[type="checkbox"].sheet-normal + span::before
+{
+    position:relative;
+    content: "";
+    opacity: 1.0;
+    width: 10px;
+    height: 10px;
+    font-size: 12px;
+
+    -moz-border-radius: 1px;
+    -webkit-border-radius: 1px;
+    border-radius: 1px;
+}
+
+.sheet-dots input[type="checkbox"].sheet-normal:checked + span::before
+{
+    background:
+        linear-gradient(to top left,
+           rgba(0,0,0,0) 0%,
+           rgba(0,0,0,0) calc(50% - 0.8px),
+           rgba(0,0,0,1) 50%,
+           rgba(0,0,0,0) calc(50% + 0.8px),
+           rgba(0,0,0,0) 100%),
+       linear-gradient(to top right,
+           rgba(0,0,0,0) 0%,
+           rgba(0,0,0,0) calc(50% - 0.8px),
+           rgba(0,0,0,1) 50%,
+           rgba(0,0,0,0) calc(50% + 0.8px),
+           rgba(0,0,0,0) 100%);
+
+    -moz-box-shadow: 0 0 2px transparent;
+    -webkit-box-shadow: 0 0 2px transparent;
+    box-shadow: 0 0 2px transparent;
+}
+
+
+.sheet-dots input[type="radio"].sheet-normal:checked ~ input[type="radio"] + span::before
+{
+    content: "";
+}
+
+
+.sheet-dots input[type=radio].sheet-zero:checked + span::before{ opacity: 0; }
+
+.sheet-dots input[type=radio].sheet-zero:hover + span::before
+{
+    opacity: 0.75;
+    font-size: 12px;
+    content: "✖";
+    text-indent: 0.5px;
+}
+
+.sheet-dots input[type=radio].sheet-zero + span::before { opacity: 0.4; }
+*/
+
+/* *************** */
+/*      TABS       */
+/* *************** */
+
 input.sheet-tab
 {
     width:  100px;
@@ -574,6 +660,11 @@ input.sheet-tab:checked + span::before
 
 .sheet-tab-content { display: none; }
 
+
+/* *************** */
+/*      MISC       */
+/* *************** */
+
 .sheet-center,
 h3.sheet-ability,
 h4,
@@ -588,8 +679,9 @@ input[type=number] { text-align: center; }
 .sheet-intimacy .sheet-dots { text-align: right; }
 
 button[type=roll].sheet-blank-roll-button::before,
-input[type=radio]:not(.sheet-tab):checked ~ input[type=radio] + span::before,
-.sheet-dots input[type=checkbox]:checked ~ input[type=radio] + span::before { content: ""; }
+input[type=radio]:not(.sheet-tab):checked ~ input[type=radio] + span::before{ content: ""; }
+
+.sheet-dots input[type=radio]:not(.sheet-tab):checked ~ input[type=radio] + span::before{ content: ""; }
 
 span.sheet-attribute + div,
 span.sheet-ability + div,
@@ -624,38 +716,42 @@ div.sheet-attribute > input[type=checkbox]:first-child + span::before,
 .sheet-dots input[type=checkbox]:first-child:checked + span::before { opacity: 1; }
 
 
-/*Configure the tab buttons*/
+/* ********************* */
+/*     Caste Ability     */
+/* ********************* */
+
+/* Hides all Castes in 'Abilities'-section by default*/
 .sheet-solar-ab,
+.sheet-lunar-ab,
+.sheet-abyssal-ab,
+.sheet-sidereal-ab,
 .sheet-dragon-ab{
     display: none;
 }
 
-/* show the selected tab */
+/* selectively shows Caste Abilities based on selected caste/subcaste */
 .sheet-caste-toggle[value="Dawn"] ~ div.sheet-solar-ab,
 .sheet-caste-toggle[value="Zenith"] ~ div.sheet-solar-ab,
 .sheet-caste-toggle[value="Twilight"] ~ div.sheet-solar-ab,
 .sheet-caste-toggle[value="Night"] ~ div.sheet-solar-ab,
 .sheet-caste-toggle[value="Eclipse"] ~ div.sheet-solar-ab,
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-.sheet-caste-toggle[value=""] ~ div.sheet-solar-ab,
-
+.sheet-caste-toggle[value="FullMoon"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="ChangingMoon"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="NoMoon"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Dusk"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Day"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Midnight"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Moonshadow"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Daybreak"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Journey"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Serenity"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Battle"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Secret"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Ending"] ~ div.sheet-solar-ab,
+.sheet-caste-toggle[value="Air"] ~ div.sheet-dragon-ab,
 .sheet-caste-toggle[value="Earth"] ~ div.sheet-dragon-ab,
 .sheet-caste-toggle[value="Fire"] ~ div.sheet-dragon-ab,
 .sheet-caste-toggle[value="Water"] ~ div.sheet-dragon-ab,
-.sheet-caste-toggle[value="Air"] ~ div.sheet-dragon-ab,
 .sheet-caste-toggle[value="Wood"] ~ div.sheet-dragon-ab,{
     display: block;
 }
