Exalted 2E: set solar abilities to start at zero with workaround

--- a/Exalted2e/exalted2e.css
+++ b/Exalted2e/exalted2e.css
@@ -626,7 +626,6 @@ input.sheet-tab:checked ~ input.sheet-tab + span::before
     background-image: -ms-linear-gradient(top, #cbd600, #d9b84e);
     background-image: -o-linear-gradient(top, #cbd600, #d9b84e);
     background-image: linear-gradient(to bottom, #cbd600, #d9b84e);
-    filter:           progid: DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#cbd600, endColorstr=#d9b84e);
 
     color: #f8f8f8;
     content: attr(title);
@@ -653,7 +652,6 @@ input.sheet-tab:checked + span::before
     background-image: -ms-linear-gradient(top, #9ba300, #c9a32b);
     background-image: -o-linear-gradient(top, #9ba300, #c9a32b);
     background-image: linear-gradient(to bottom, #9ba300, #c9a32b);
-    filter:           progid: DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#9ba300, endColorstr=#c9a32b);
 
     border: 1px solid #6a7000;
 }
@@ -679,9 +677,10 @@ input[type=number] { text-align: center; }
 .sheet-intimacy .sheet-dots { text-align: right; }
 
 button[type=roll].sheet-blank-roll-button::before,
-input[type=radio]:not(.sheet-tab):checked ~ input[type=radio] + span::before{ content: ""; }
+input[type=radio]:not(.sheet-tab):checked ~ input[type=radio] + span::before,
+.sheet-dots input[type=checkbox]:checked ~ input[type=radio] + span::before { content: ""; }
 
-.sheet-dots input[type=radio]:not(.sheet-tab):checked ~ input[type=radio] + span::before{ content: ""; }
+
 
 span.sheet-attribute + div,
 span.sheet-ability + div,
@@ -752,6 +751,6 @@ div.sheet-attribute > input[type=checkbox]:first-child + span::before,
 .sheet-caste-toggle[value="Earth"] ~ div.sheet-dragon-ab,
 .sheet-caste-toggle[value="Fire"] ~ div.sheet-dragon-ab,
 .sheet-caste-toggle[value="Water"] ~ div.sheet-dragon-ab,
-.sheet-caste-toggle[value="Wood"] ~ div.sheet-dragon-ab,{
+.sheet-caste-toggle[value="Wood"] ~ div.sheet-dragon-ab{
     display: block;
 }
