--- a/Urban-Jungle/UrbanJungle.css
+++ b/Urban-Jungle/UrbanJungle.css
@@ -9,7 +9,7 @@
 	min-height: 850px;
 	max-height: 850px;
 	background-color:black;
-    background: url("https://s3.amazonaws.com/files.d20.io/images/97325931/B16t3bUuB8-Dauy91jmh2w/original.jpg?15741306385");
+    background: url("194021.jpg");
 }
 
 body {
