--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -47,11 +47,11 @@ input[type="checkbox"].sheet-announcements-older-show {
 }
 
 input.sheet-announcements-show:hover+span {
-  color: red;
+  color: #a60100;
 }
 
 input.sheet-announcements-older-show:hover+span {
-  border-left-color: red;
+  border-left-color: #a60100;
 }
 
 input.sheet-announcements-older-show+span {
@@ -320,7 +320,6 @@ button.sheet-roll-button {
   width: 1.25em;
   height: 1.25em;
   margin: 5px 2px 5px 2px;
-  padding: 1px 1px 1px 1px;
   content: "t";
   cursor: pointer;
   border: 1px solid #ccc;
@@ -338,7 +337,7 @@ button.sheet-roll-button {
 }
 
 .sheet-roll-indicator:checked ~ button[name="roll_the_dice"] {
-  box-shadow: 4px 4px 7px darkred;
+  box-shadow: 4px 4px 7px #a60100;
   transition: box-shadow 4s;
 }
 */
@@ -1415,7 +1414,7 @@ input.sheet-conditions-sleepy:checked~div>span.sheet-conditions-sleepy,
 input.sheet-conditions-thirsty:checked~div>span.sheet-conditions-thirsty,
 input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
   font-weight: bold;
-  color: #800000;
+  color: #a60100;
 }
 
 /* ---------------------------------- Critical Injuries */
