Fixed background URL

--- a/Urban-Jungle/UrbanJungle.css
+++ b/Urban-Jungle/UrbanJungle.css
@@ -9,7 +9,7 @@
 	min-height: 850px;
 	max-height: 850px;
 	background-color:black;
-    background: url("194021.jpg");
+    background: url(https://github.com/Roll20/roll20-character-sheets/blob/master/Urban-Jungle/194021.jpg?raw=true);
 }
 
 body {
