--- a/AW2E-Burned-Over/style.css
+++ b/AW2E-Burned-Over/style.css
@@ -14,6 +14,10 @@ src: local('Special Elite'), local('SpecialElite-Regular'), url(http://fonts.gst
 li {
     list-style: none;
 }
+li.inline {
+    list-style: inline;
+}
+
 .charsheet .sheet-maindiv {
     background: white;
 }
