--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -68,6 +68,10 @@ h4 {
     text-transform: uppercase;
 }
 
+h4.sheet-tab-title {
+    display: inline-block
+}
+
 h5 {
     font-family: Copperplate, "Copperplate Gothic Light", fantasy;
     font-weight: bold;
@@ -106,6 +110,41 @@ hr {
     height: 1px;
     background: #ccc;
     background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
+
+.sheet-page1tab, .sheet-page2tab {
+    display: none;
+}
+
+
+input[type=radio].sheet-page1:checked ~ div.sheet-page1tab,
+input[type=radio].sheet-page2:checked ~ div.sheet-page2tab {
+    display: block;
+}
+
+input.sheet-pages + .sheet-page-label,
+input.sheet-clear-vow + .sheet-vow-clear-label {
+    border-radius: 4px;
+    padding: 2px 4px;
+}
+
+.sheet-vow-clear-label {
+    border: 1px solid #ccc;
+    margin-right: 11px;
+}
+
+.sheet-pages:checked + .sheet-page-label {
+    background-color: black;
+    color: white;
+}
+
+.sheet-page-label:hover,
+.sheet-vow-clear-label:hover {
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 2px 4px;
+    background-color: #ccc;
+    color: black;
 }
 
 .sheet-vertleft {
@@ -167,13 +206,13 @@ hr {
 .sheet-vows {
     margin-bottom: 0px;
 }
-.sheet-vows-header {
+.sheet-vows-header, .sheet-progress-header {
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin-bottom: 10px;
 }
-.sheet-vow {
+.sheet-vow, .sheet-progress {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -251,11 +290,18 @@ hr {
     font-weight: bold;
     font-size: 14px;
 }
-.sheet-vow-name {
+.sheet-vow-name,
+.sheet-progress-name,
+.sheet-page-label, 
+.sheet-vow-clear-label {
     width: 100%;
     font-family: Copperplate, "Copperplate Gothic Light", fantasy;
     font-weight: bold;
     font-size: 14px;
+}
+
+.sheet-page-label, .sheet-vow-clear-label {
+    display: inline
 }
 
 input.sheet-filler[type="radio"],
@@ -357,7 +403,18 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     justify-content: center;
     align-items: center;
     padding: 2px 0px 0px 12px;
+}
 
+.sheet-progress-input:hover {
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 2px 0px 0px 12px;
+    background-color: #ccc; 
 }
 
 .sheet-hidden {
